[gd_scene load_steps=18 format=3 uid="uid://c6xr8ys7nk2vt"]

[ext_resource type="Texture2D" uid="uid://cap1pax7b2ieh" path="res://B8mO2W836FDGhVtibmMpX9_1758265284641_na1fn_L2hvbWUvdWJ1bnR1L3JvYm90aWNzX2xhYl9yb29t.webp" id="1_lsacx"]
[ext_resource type="Script" uid="uid://cetidpgwagm73" path="res://nga.gd" id="1_s48pm"]
[ext_resource type="FontFile" uid="uid://bi11k82rso0ob" path="res://PixelAE-Bold.ttf" id="2_es5vs"]
[ext_resource type="Texture2D" uid="uid://sk0s36nbdu8c" path="res://1_vCN9ub8Af3Izt0QPtfPlAM_1758265642789_na1fn_L2hvbWUvdWJ1bnR1L3JpZ2h0X2Fycm93-removebg-preview.png" id="4_04h4r"]
[ext_resource type="Texture2D" uid="uid://dorjnciddxwx3" path="res://virus_pixel_2-removebg-preview.png" id="5_u0ge4"]
[ext_resource type="Texture2D" uid="uid://dgymc3i3afv3e" path="res://0_V1vK5U7NVT94rdl3sPTKgf_1758265873697_na1fn_L2hvbWUvdWJ1bnR1L3JhbV9jaGlwX3BpeGVsX2FydA-removebg-preview.png" id="6_nt865"]

[sub_resource type="LabelSettings" id="LabelSettings_s48pm"]
font = ExtResource("2_es5vs")
font_size = 75
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_04h4r"]
font = ExtResource("2_es5vs")
font_size = 75
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_24qrc"]
texture = ExtResource("4_04h4r")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vhxyd"]
texture = ExtResource("4_04h4r")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nt865"]
texture = ExtResource("4_04h4r")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u0ge4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vhxyd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3khle"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_l12r1"]
resource_name = "new_animation"
length = 2.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_12pqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2vml8"]
_data = {
&"RESET": SubResource("Animation_12pqb"),
&"new_animation": SubResource("Animation_l12r1")
}

[node name="nga" type="Node2D"]
script = ExtResource("1_s48pm")

[node name="Hr1mDKhkjChoUhcex3xBv31758265284705Na1FnL2HvbWUvdWj1BnR1l3NlcnZlcl9Yb29t" type="Sprite2D" parent="."]
position = Vector2(583, 298)
scale = Vector2(1.19149, 0.724879)
texture = ExtResource("1_lsacx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="text" type="Label" parent="Control"]
layout_mode = 0
offset_left = 294.0
offset_top = 3.0
offset_right = 881.0
offset_bottom = 116.0
text = "find the parts !!"
label_settings = SubResource("LabelSettings_s48pm")

[node name="info" type="Label" parent="Control"]
layout_mode = 0
offset_left = 287.0
offset_top = 86.0
offset_right = 1838.0
offset_bottom = 205.0
scale = Vector2(0.372908, 0.443038)
text = "اعثر عل القطع في الصور واحذر من الفايروسات*"
label_settings = SubResource("LabelSettings_s48pm")

[node name="text2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 132.0
offset_right = 593.0
offset_bottom = 245.0
scale = Vector2(0.801656, 0.83063)
text = "level 3"
label_settings = SubResource("LabelSettings_04h4r")

[node name="text3" type="Label" parent="Control"]
layout_mode = 0
offset_left = 426.0
offset_top = 574.0
offset_right = 1013.0
offset_bottom = 687.0
scale = Vector2(0.668266, 0.651272)
text = "page 1/3"
label_settings = SubResource("LabelSettings_04h4r")

[node name="uhh" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 481.0
offset_top = 550.0
offset_right = 521.0
offset_bottom = 590.0

[node name="Button" type="Button" parent="uhh"]
layout_mode = 0
offset_left = 97.0
offset_top = -14.0
offset_right = 105.0
offset_bottom = -6.0
scale = Vector2(32.1613, 19.651)
theme_override_styles/normal = SubResource("StyleBoxTexture_24qrc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vhxyd")
theme_override_styles/hover = SubResource("StyleBoxTexture_nt865")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u0ge4")

[node name="virus !" type="Button" parent="."]
offset_left = 775.0
offset_top = 265.00003
offset_right = 1283.0
offset_bottom = 773.0
scale = Vector2(0.144935, 0.173753)
theme_override_icons/icon = ExtResource("5_u0ge4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vhxyd")
icon = ExtResource("6_nt865")
flat = true
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = -120.0
offset_top = -181.0
offset_right = 1290.0
offset_bottom = 791.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3khle")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2vml8")
}

[connection signal="pressed" from="uhh/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="virus !" to="." method="_on_virus__pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
